# repoman

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  FUTURE.md  INSTALL.md  Makefile  NEXTSTEPS.md  README.md  TEST_DRIVE.md  ZSH.md  go.mod  go.sum  repoman.md  roadmap.md  todo.md
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot.yml  release.yml  security.yml
cmd/repoman/: main.go
docs/: AGENT_SUGGESTIONS.md  MCP_IDEAS.md  MCP_TESTING.md  TEST_DRIVE.md  WEB_DASHBOARD.md  ssh-authentication.md
docs/manual/: README.md  architecture.md  configuration.md  getting-started.md  hooks.md  plugins.md
docs/manual/commands/: add.md  agent.md  alias.md  clone.md  completions.md  config.md  dashboard.md  destroy.md  doctor.md  export-import.md  gc.md  init.md  list.md  mcp.md  open.md  refresh.md  remove.md  rename.md  shell-init.md  status.md  sync.md  update.md
examples/plugins/: auto_deps.lua  salesforce.lua  sync_report.lua  tmux.lua
internal/clone/: clone.go  clone_test.go
internal/config/: config.go  config_test.go
internal/pristine/: pristine.go  pristine_test.go
internal/types/: types.go  types_test.go
internal/vault/: vault.go  vault_test.go
src/: agent.rs  config.rs  dashboard.rs  error.rs  hooks.rs  lib.rs  main.rs  metadata.rs  plugins.rs  util.rs  vault.rs
src/commands/: add.rs  agent.rs  alias.rs  clone_cmd.rs  config_cmd.rs  destroy.rs  doctor.rs  export_import.rs  gc.rs  init.rs  list.rs  mod.rs  open.rs  refresh.rs  remove.rs  rename.rs  shell_init.rs  status.rs  sync.rs  update.rs  upgrade.rs
src/mcp/: mod.rs  protocol.rs  resources.rs  tools.rs
src/operations/: add.rs  alias.rs  clone_op.rs  credentials.rs  destroy.rs  export_import.rs  gc.rs  init.rs  list.rs  mod.rs  open.rs  rebase.rs  remove.rs  status.rs  sync.rs  update.rs
tests/: e2e_pipeline.rs  vault_tests.rs
