[package]
name = "repoman"
version = "0.3.7"
edition = "2024"
authors = ["Repoman Contributors"]
description = "A git repository manager built around disposable workspaces"

[package.metadata.wix]
manufacturer = "Repoman Contributors"
product-name = "Repoman"
upgrade-guid = "A17BA9AA-B5E5-4D7F-8D4A-B847AFA528E2"
path-guid = "F7B77A85-AAD8-4094-B446-54F40D84E790"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5.51", features = ["derive"] }
clap_complete = "4.5"
clap_mangen = "0.2"
colored = "3"
crossterm = "0.28"
dirs = "6.0.0"
fs2 = "0.4"
git2 = "0.20.2"
indicatif = "0.17"
libc = "0.2"
log = "0.4.29"
mlua = { version = "0.10", features = ["lua54", "vendored"] }
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
ratatui = "0.29"
semver = "1.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yml = "0.0.12"
simplelog = "0.12.2"
strsim = "0.11"
tempfile = "3.10"
thiserror = "2.0"
tokio = { version = "1.48.0", features = ["full"] }

[dev-dependencies]
tempfile = "3.10"
